fix buttons and dialog header styles with dark mode

--- a/src/app/modules/client/components/my-telas/my-telas.component.scss
+++ b/src/app/modules/client/components/my-telas/my-telas.component.scss
@@ -381,7 +381,8 @@ body.dark-theme {
 
 .attachment-preview {
   position: relative;
-  height: 150px;
+  height: 100%;
+  max-height: 350px;
   overflow: hidden;
   background: var(--cor-cinza-fundo);
   display: flex;
@@ -481,7 +482,7 @@ body.dark-theme {
   .attachment-image {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     object-position: center;
   }
 
